[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ponytool"
version = "1.1.0"
dependencies = [
    "rich==14.2.0",
]
description = "Developer toolbox (CLI)"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
pony = "ponytool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ponytool*"]

[tool.setuptools.package-data]
ponytool = ["config/*.toml"]